--- a/config/options.ini
+++ b/config/options.ini
@@ -21,7 +21,7 @@
 # Find your bot's token here: https://discordapp.com/developers/applications/me/
 # Create a new application, with no redirect URI or boxes ticked.
 # Then click 'Create Bot User' on the application page and copy the token here.
-Token = Nzc5MzYzODA5MTk4MDgwMTAw.X7fdGw.YxAOPom_dORHmoP0WAELQV9hicM
+Token = bot_token
 
 # The bot supports converting Spotify links and URIs to YouTube videos and
 # playing them. To enable this feature, please fill in these two options with valid
